[metadata]
name = mee2024
version = 0.6.0
author = Andrew
description = MEE 2024 Stacker

[options]
packages = find:
python_requires = >=3.9
include_package_data = true
install_requires =
    NumPy
    Astropy
    Photutils
    SciPy
    Matplotlib
    scikit-image
    astroquery==0.4.6
    FreeSimpleGUI
    OpenCV-python
    Pandas
    scikit-learn
    statsmodels
    platformdirs


[options.package_data]
mee2024 = resources/*

[options.entry_points]
console_scripts =
    mee2024 = mee2024.main:main
